course-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cloudstudents
  name: deployment-course-uma   # 🔴 YOUR deployment name
spec:
  selector:
    matchLabels:
      app: course-uma           # 🔴 YOUR label
  replicas: 1
  template:
    metadata:
      labels:
        app: course-uma
    spec:
      containers:
      - name: course-uma        # 🔴 YOUR container name
        image: 991524241826.dkr.ecr.ap-south-2.amazonaws.com/uma/course-service:latest   # 🔴 YOUR ECR image
        imagePullPolicy: Always
        ports:
        - containerPort: 3001    # 🔴 IMPORTANT (Flask runs on 3001)
---
apiVersion: v1
kind: Service
metadata:
  namespace: cloudstudents
  name: service-course-uma     # 🔴 YOUR service name
spec:
  type: NodePort
  selector:
    app: course-sush
  ports:
    - port: 3001               # 🔴 match container
      targetPort: 3001
      protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cloudstudents
  name: ingress-course-uma    # 🔴 YOUR ingress name
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /uma-student
          pathType: Prefix
          backend:
            service:
              name: service-course-sush
              port:
                number: 3001
